@@ -1,3 +1,8 @@
+2006-11-26  Arno Rehn  <arno@arnorehn.de>
+
+	* Added marshall_ItemList and all DEF_LIST_MARSHALLER and
+	  DEF_VALUELIST_MARSHALLER from qtruby.
+
 2006-10-23  Arno Rehn  <arno@arnorehn.de>
 
 	* Marshalling ItemLists should now fully work. But we still need
